--- a/index.html
+++ b/index.html
@@ -2,51 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <script defer src="script.js"></script>
-    <!-- CSS -->
-    <style>
-        .cat-counters {
-            display: flex;
-            justify-content: space-around;
-        }
-
-        .cat-1__info,
-        .cat-2__info {
-            display: flex;
-            justify-content: space-between;
-        }
-
-        .cat-1__info > *,
-        .cat-2__info > * {
-            margin-bottom: 0;
-        }
-
-        .cat-counters > section > img {
-            width: 640px;
-            height: 420px;
-        }
-    </style>
+    <title>Cat Clicker</title>
 </head>
 <body>
-    <div class="cat-counters">
-        <section class="cat-1">
-            <div class="cat-1__info">
-            <h4 id="cat-1__name">name: </h4>
-            <h4 id="cat-1__counter">Clicks: 0</h4>
-            </div>
-            <img id="cat-1__img" src="https://lh3.ggpht.com/nlI91wYNCrjjNy5f-S3CmVehIBM4cprx-JFWOztLk7vFlhYuFR6YnxcT446AvxYg4Ab7M1Fy0twaOCWYcUk=s0#w=640&h=426" alt="image of a kitty cat">
-        </section>
-
-        <section class="cat-2">
-                <div class="cat-2__info">
-                <h4 id="cat-2__name">name</h4>
-                <h4 id="cat-2__counter">Clicks: 0</h4>
-                </div>
-                <img id="cat-2__img" src="https://lh3.ggpht.com/kixazxoJ2ufl3ACj2I85Xsy-Rfog97BM75ZiLaX02KgeYramAEqlEHqPC3rKqdQj4C1VFnXXryadFs1J9A=s0#w=640&h=496" alt="image of a shy cat">
-        </section>
-    </div>
+	<div id="catlist">
+		<button id='button1'>cat 1</button>
+		<button id='button2'>cat 2</button>
+		<button id='button3'>cat 3</button>
+		<button id='button4'>cat 4</button>
+		<button id='button5'>cat 5</button>
+	</div>
+	<div class="cat" id="cat1">
+		<span class="counter">0</span> clicks
+		<br>
+   		<img class="clicker" src="cat_picture1.jpg">
+   	</div>
+   	<div class="cat" id="cat2">
+		<span class="counter">0</span> clicks
+		<br>
+   		<img class="clicker" src="cat_picture2.jpeg">
+   	</div>
+   	<div class="cat" id="cat3">
+		<span class="counter">0</span> clicks
+		<br>
+   		<img class="clicker" src="cat_picture3.jpeg">
+   	</div>
+   	<div class="cat" id="cat4">
+		<span class="counter">0</span> clicks
+		<br>
+   		<img class="clicker" src="cat_picture4.jpeg">
+   	</div>
+   	<div class="cat" id="cat5">
+		<span class="counter">0</span> clicks
+		<br>
+   		<img class="clicker" src="cat_picture5.jpeg">
+   	</div>
 </body>
 </html>
+<script src="jquery.js"></script>
+<script src="app.js"></script>
